# z2kplus

./: .gitignore  INSTALLATION.md  README.md
backend/: CMakeLists.txt  README.md
backend/include/public/z2kplus/backend/communicator/: channel.h  communicator.h  message_buffer.h  robustifier.h  session.h
backend/include/public/z2kplus/backend/coordinator/: coordinator.h  subscription.h
backend/include/public/z2kplus/backend/factories/: log_parser.h
backend/include/public/z2kplus/backend/files/: keys.h  path_master.h
backend/include/public/z2kplus/backend/legacy/: file_logrecord.h  zephyrgram.h
backend/include/public/z2kplus/backend/queryparsing/: parser.h  util.h
backend/include/public/z2kplus/backend/reverse_index/: fields.h  types.h
backend/include/public/z2kplus/backend/reverse_index/builder/: canonical_string_processor.h  common.h  index_builder.h  inflator.h  log_analyzer.h  log_splitter.h  metadata_builder.h  schemas.h  trie_builder.h  trie_finalizer.h  zgram_digestor.h
backend/include/public/z2kplus/backend/reverse_index/builder/tuple_iterators/: accumulator.h  counter.h  emitter.h  iterator_base.h  last_keeper.h  prefix_grabber.h  row_iterator.h  running_sum.h  string_freezer.h  true_keeper.h  tuple_counter.h  tuple_serializer.h  util.h
backend/include/public/z2kplus/backend/reverse_index/index/: consolidated_index.h  dynamic_index.h  frozen_index.h  zgram_cache.h
backend/include/public/z2kplus/backend/reverse_index/iterators/: iterator_common.h
backend/include/public/z2kplus/backend/reverse_index/iterators/boundary/: near.h  word_adaptor.h
backend/include/public/z2kplus/backend/reverse_index/iterators/word/: anchored.h  any_word.h  pattern.h
backend/include/public/z2kplus/backend/reverse_index/iterators/zgram/: and.h  not.h  or.h  popornot.h  zgramid.h
backend/include/public/z2kplus/backend/reverse_index/iterators/zgram/metadata/: having_reaction.h
backend/include/public/z2kplus/backend/reverse_index/metadata/: dynamic_metadata.h  frozen_metadata.h
backend/include/public/z2kplus/backend/reverse_index/trie/: dynamic_node.h  dynamic_trie.h  frozen_node.h  frozen_trie.h  traversal.h
backend/include/public/z2kplus/backend/server/: server.h
backend/include/public/z2kplus/backend/shared/: logging_policy.h  magic_constants.h  merge.h  plusplus_scanner.h  profile.h  util.h  zephyrgram.h
backend/include/public/z2kplus/backend/shared/protocol/: misc.h
backend/include/public/z2kplus/backend/shared/protocol/control/: crequest.h  cresponse.h
backend/include/public/z2kplus/backend/shared/protocol/message/: drequest.h  dresponse.h
backend/include/public/z2kplus/backend/util/: blocking_queue.h  misc.h  myallocator.h  myiterator.h  mysocket.h  relative.h
backend/include/public/z2kplus/backend/util/automaton/: automaton.h  fuzzy_unicode.h
backend/include/public/z2kplus/backend/util/frozen/: frozen_map.h  frozen_set.h  frozen_string_pool.h  frozen_vector.h
backend/src/: backend_main.cc  compactor_main.cc  legacy_converter_main.cc
backend/src/communicator/: channel.cc  communicator.cc  message_buffer.cc  robustifier.cc  session.cc
backend/src/coordinator/: coordinator.cc  subscription.cc
backend/src/factories/: log_parser.cc
backend/src/files/: keys.cc  path_master.cc
backend/src/legacy/: file_logrecord.cc  zephyrgram.cc
backend/src/queryparsing/: README.txt  ZarchiveLexer.g4  ZarchiveParser.g4  parser.cc  util.cc
backend/src/reverse_index/: fields.cc  types.cc
backend/src/reverse_index/builder/: canonical_string_processor.cc  common.cc  index_builder.cc  inflator.cc  log_analyzer.cc  log_splitter.cc  metadata_builder.cc  schemas.cc  trie_builder.cc  trie_finalizer.cc  zgram_digestor.cc
backend/src/reverse_index/builder/tuple_iterators/: tuple_counter.cc  tuple_serializer.cc
backend/src/reverse_index/index/: consolidated_index.cc  dynamic_index.cc  frozen_index.cc  zgram_cache.cc
backend/src/reverse_index/iterators/: iterator_common.cc
backend/src/reverse_index/iterators/boundary/: near.cc  word_adaptor.cc
backend/src/reverse_index/iterators/word/: anchored.cc  any_word.cc  pattern.cc
backend/src/reverse_index/iterators/zgram/: and.cc  not.cc  or.cc  popornot.cc  zgramid.cc
backend/src/reverse_index/iterators/zgram/metadata/: having_reaction.cc
backend/src/reverse_index/metadata/: dynamic_metadata.cc  frozen_metadata.cc
backend/src/reverse_index/trie/: dynamic_node.cc  dynamic_trie.cc  frozen_node.cc  frozen_trie.cc  traversal.cc
backend/src/server/: server.cc
backend/src/shared/: logging_policy.cc  magic_constants.cc  plusplus_scanner.cc  profile.cc  util.cc  zephyrgram.cc
backend/src/shared/protocol/: README.md  misc.cc
backend/src/shared/protocol/control/: crequest.cc  cresponse.cc
backend/src/shared/protocol/message/: drequest.cc  dresponse.cc
backend/src/util/: blocking_queue.cc  misc.cc  myallocator.cc  mysocket.cc
backend/src/util/automaton/: automaton.cc  fuzzy_unicode.cc
backend/src/util/frozen/: frozen_string_pool.cc
backend/test/: test_coordinator.cc  test_dfa.cc  test_filters.cc  test_index_construction.cc  test_main.cc  test_metadata.cc  test_misc.cc  test_paging.cc  test_parsing.cc  test_plusplus.cc  test_reverse_index.cc  test_server.cc  test_tuple_iterators.cc
backend/test/include/public/z2kplus/backend/test/util/: client_endpoint.h  fake_frontend.h  test_util.h
backend/test/util/: client_endpoint.cc  fake_frontend.cc  test_util.cc
frontend/: package-lock.json  package.json
frontend/client/: InitialQuery.ts  client.ts  session_manager.ts  session_status.ts  tsconfig.json  webpack.config.js  z2kstate.ts
frontend/client/components/: add_filter_component.ts  filters_dialog_component.ts  query_dialog_component.ts  reactions_component.ts  (+10 more)
frontend/server/: .gitignore  authorization_manager.ts  backend_manager.ts  client_manager.ts  passportutil.ts  profile_manager.ts  server.ts  tsconfig.json  util.ts
frontend/shared/: chunker.ts  functional.ts  json_util.ts  logger.ts  magic_constants.ts  rate_limiter.ts  uploadable_media_util.ts  utility.ts
testfiles/: .gitignore
(+29 files in other folders)
